feat: add database config

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Docker required
 DOCKER_NETWORK_SUBNET = 170.25.0.0/24
-DOCKER_PGSQL_SERVER_IPV4=170.25.0.3
 DOCKER_WEBSERVER_IPV4=170.25.0.9
 DOCKER_NETWORK_NAME=docker_staging_network
 DOCKER_ENV=local
 DOCKER_DOCUMENT_ROOT=/var/www
 APP_HOST=webserver.nowston-dev.io
+DOCKER_PGSQL_HOST_EXPOSED_PORT=5432
 
 APP_NAME=Laravel
 APP_ENV=local
@@ -17,12 +17,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=170.25.0.3
+DB_PORT=5432
+DB_DATABASE=develop
+DB_USERNAME=develop
+DB_PASSWORD=develop
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
